@@ -61,6 +61,7 @@ phpMyAdmin - ChangeLog
 + patch #3432835 [interface] Add useful intermediate pages to pageselector
 + [interface] Improved index editor
 + View editing via a generated ALTER VIEW
+- bug #3408377 [interface] Deleting table from the DB does not change the table counter
 
 3.4.9.0 (not yet released)
 - bug #3442028 [edit] Inline editing enum fields with null shows no dropdown
